[package]
name = "outliers"
version = "0.2.1"
authors = ["Joseph T Lyons <JosephTLyons@gmail.com>"]
edition = "2018"
description = "Identify outliers in a data set."
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
