[package]
name = "outliers"
version = "0.4.1"
authors = ["Joseph T Lyons <JosephTLyons@gmail.com>"]
edition = "2018"
description = "Identify outliers in a data set."
license = "GPL-3.0-only"
repository = "https://github.com/JosephTLyons/outliers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
statrs = "0.13.0"
thiserror = "1.0.23"
